Fixing list of issues

--- a/src/components/Content/Content.module.css
+++ b/src/components/Content/Content.module.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   justify-content: space-between;
   padding: 16px;
-  height: calc(100vh - 96px);
+  /*height: calc(100vh - 96px);*/
   overflow: auto;
+  margin-bottom: 48px;
 }
